man: Fix grl-launch browse example
s/box/container/ as done in grilo 0.3

--- a/grl-launch-0.3.1
+++ b/grl-launch-0.3.1
@@ -109,7 +109,7 @@ Print the title for the videos indexed by Tracker:
 .PP
 .nf
 .RS
-grl-launch-0.3 -S browse -k title grlbox://grl-tracker-source/videos
+grl-launch-0.3 -S browse -k title grlcontainer://grl-tracker-source/videos
 .RE
 .fi
 .PP
