--- a/po/pl.po
+++ b/po/pl.po
@@ -1,27 +1,23 @@
-# -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
-# Aviary.pl
-# Jeśli masz jakiekolwiek uwagi odnoszące się do tłumaczenia lub chcesz
-# pomóc w jego rozwijaniu i pielęgnowaniu, napisz do nas:
-# gnomepl@aviary.pl
-# -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
-# Piotr Drąg <piotrdrag@gmail.com>, 2013-2015.
-# Aviary.pl <gnomepl@aviary.pl>, 2013-2015.
+# Polish translation for grilo.
+# Copyright © 2013-2016 the grilo authors.
+# This file is distributed under the same license as the grilo package.
+# Piotr Drąg <piotrdrag@gmail.com>, 2013-2016.
+# Aviary.pl <community-poland@mozilla.org>, 2013-2016.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: grilo\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-12-17 02:01+0100\n"
-"PO-Revision-Date: 2015-12-17 02:02+0100\n"
+"POT-Creation-Date: 2016-08-22 21:24+0200\n"
+"PO-Revision-Date: 2016-08-22 21:25+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
-"Language-Team: Polish <gnomepl@aviary.pl>\n"
+"Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"X-Poedit-Language: Polish\n"
-"X-Poedit-Country: Poland\n"
 
 #: ../libs/net/grl-net-mock.c:86
 msgid "No mock definition found"
@@ -39,11 +35,11 @@ msgstr "Nie można uzyskać dostępu do sztucznej treści: %s"
 
 #: ../libs/net/grl-net-wc.c:449
 msgid "Cannot connect to the server"
-msgstr "Nie można połączyć się z serwerem"
+msgstr "Nie można połączyć z serwerem"
 
 #: ../libs/net/grl-net-wc.c:455
 msgid "Cannot connect to the proxy server"
-msgstr "Nie można połączyć się z serwerem pośrednika"
+msgstr "Nie można połączyć z serwerem pośrednika"
 
 #: ../libs/net/grl-net-wc.c:462
 #, c-format
@@ -77,11 +73,11 @@ msgstr "Anulowano działanie"
 msgid "Unhandled status: %s"
 msgstr "Nieobsłużony stan: %s"
 
-#: ../libs/net/grl-net-wc.c:600 ../libs/net/grl-net-wc.c:641
+#: ../libs/net/grl-net-wc.c:600 ../libs/net/grl-net-wc.c:644
 msgid "Data not available"
 msgstr "Dane nie są dostępne"
 
-#: ../libs/net/grl-net-wc.c:691
+#: ../libs/net/grl-net-wc.c:695
 #, c-format
 msgid "Invalid URL %s"
 msgstr "Nieprawidłowy adres URL %s"
@@ -116,7 +112,7 @@ msgstr "Żadne wyszukiwalne źródła nie są dostępne"
 msgid "Could not resolve media for URI '%s'"
 msgstr "Nie można rozwiązać nośnika dla adresu URI „%s”"
 
-#: ../src/grl-registry.c:464 ../src/grl-registry.c:1376
+#: ../src/grl-registry.c:464 ../src/grl-registry.c:1377
 #, c-format
 msgid "Plugin '%s' is already loaded"
 msgstr "Wtyczka „%s” jest już wczytana"
@@ -124,12 +120,12 @@ msgstr "Wtyczka „%s” jest już wczytana"
 #: ../src/grl-registry.c:488
 #, c-format
 msgid "Failed to initialize plugin from %s"
-msgstr "Zainicjowanie wtyczki z %s się nie powiodło"
+msgstr "Zainicjowanie wtyczki z %s się nie powiodło"
 
 #: ../src/grl-registry.c:530
 #, c-format
 msgid "Metadata key '%s' already registered in different format"
-msgstr "Klucz metadanych „%s” jest już zarejestrowany w innym formacie"
+msgstr "Klucz metadanych „%s” jest już zarejestrowany w innym formacie"
 
 #: ../src/grl-registry.c:543
 #, c-format
@@ -139,12 +135,12 @@ msgstr "Nie można zarejestrować klucza metadanych „%s”"
 #: ../src/grl-registry.c:983
 #, c-format
 msgid "Source with id '%s' was not found"
-msgstr "Nie odnaleziono źródła o identyfikatorze „%s”"
+msgstr "Nie odnaleziono źródła o identyfikatorze „%s”"
 
 #: ../src/grl-registry.c:1057
 #, c-format
 msgid "Failed to load plugin from %s"
-msgstr "Wczytanie wtyczki z %s się nie powiodło"
+msgstr "Wczytanie wtyczki z %s się nie powiodło"
 
 #: ../src/grl-registry.c:1066
 #, c-format
@@ -166,22 +162,22 @@ msgstr "Wtyczka „%s” już istnieje"
 msgid "Invalid path %s"
 msgstr "Nieprawidłowa ścieżka %s"
 
-#: ../src/grl-registry.c:1325
+#: ../src/grl-registry.c:1326
 #, c-format
 msgid "All configured plugin paths are invalid"
 msgstr "Wszystkie skonfigurowane ścieżki do wtyczek są nieprawidłowe"
 
-#: ../src/grl-registry.c:1365
+#: ../src/grl-registry.c:1366
 #, c-format
 msgid "Plugin '%s' not available"
 msgstr "Wtyczka „%s” jest niedostępna"
 
-#: ../src/grl-registry.c:1593
+#: ../src/grl-registry.c:1594
 #, c-format
 msgid "Plugin not found: '%s'"
 msgstr "Nie odnaleziono wtyczki: „%s”"
 
-#: ../src/grl-registry.c:1904
+#: ../src/grl-registry.c:1905
 #, c-format
 msgid "Plugin configuration does not contain 'plugin-id' reference"
 msgstr "Konfiguracja wtyczki nie zawiera odniesienia „plugin-id”"
@@ -194,7 +190,7 @@ msgstr "Nie można zapisać niektórych kluczy"
 #: ../src/grl-source.c:2855
 #, c-format
 msgid "None of the specified keys are writable"
-msgstr "Żaden z podanych kluczy nie jest zapisywalny"
+msgstr "Żaden z podanych kluczy nie jest zapisywalny"
 
 #: ../src/grl-source.c:4198
 #, c-format
