--- a/po/da.po
+++ b/po/da.po
@@ -6,8 +6,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: grilo master\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-20 23:39+0100\n"
+"Report-Msgid-Bugs-To: "
+"https://bugzilla.gnome.org/enter_bug.cgi?product=grilo&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2017-06-27 22:25+0000\n"
 "PO-Revision-Date: 2016-03-20 04:55+0100\n"
 "Last-Translator: Ask Hjorth Larsen <asklarsen@gmail.com>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
@@ -59,23 +60,18 @@ msgstr "Den forespurgte ressource blev ikke fundet: %s"
 msgid "The entry has been modified since it was downloaded: %s"
 msgstr "Posten er blevet ændret siden den blev hentet: %s"
 
-#: ../libs/net/grl-net-wc.c:487 ../libs/net/grl-net-wc.c:596
+#: ../libs/net/grl-net-wc.c:487 ../libs/net/grl-net-wc.c:599
 #: ../libs/pls/grl-pls.c:490 ../src/grl-source.c:1828 ../src/grl-source.c:1928
 #: ../src/grl-source.c:2075 ../src/grl-source.c:2332 ../src/grl-source.c:2453
 #, c-format
 msgid "Operation was cancelled"
 msgstr "Operationen blev annulleret"
 
-#: ../libs/net/grl-net-wc.c:490
-#, c-format
-msgid "Unhandled status: %s"
-msgstr "Uhåndteret status: %s"
-
-#: ../libs/net/grl-net-wc.c:600 ../libs/net/grl-net-wc.c:641
+#: ../libs/net/grl-net-wc.c:603 ../libs/net/grl-net-wc.c:647
 msgid "Data not available"
 msgstr "Data ikke tilgængelige"
 
-#: ../libs/net/grl-net-wc.c:691
+#: ../libs/net/grl-net-wc.c:698
 #, c-format
 msgid "Invalid URL %s"
 msgstr "Ugyldig URL %s"
@@ -108,12 +104,12 @@ msgstr "Ingen tilgængelige ressourcer, der kan søges i"
 #: ../src/grl-multiple.c:511
 #, c-format
 msgid "Could not resolve media for URI '%s'"
-msgstr "Kunne ikke evaluere medie for URI'en \"%s\""
+msgstr "Kunne ikke evaluere medie for URI'en “%s”"
 
 #: ../src/grl-registry.c:464 ../src/grl-registry.c:1377
 #, c-format
 msgid "Plugin '%s' is already loaded"
-msgstr "Udvidelsesmodulet \"%s\" er allerede indlæst"
+msgstr "Udvidelsesmodulet “%s” er allerede indlæst"
 
 #: ../src/grl-registry.c:488
 #, c-format
@@ -123,17 +119,17 @@ msgstr "Kunne ikke klargøre udvidelsesmodul fra %s"
 #: ../src/grl-registry.c:530
 #, c-format
 msgid "Metadata key '%s' already registered in different format"
-msgstr "Metadata-nøglen \"%s\" er allerede registreret i andet format"
+msgstr "Metadata-nøglen “%s” er allerede registreret i andet format"
 
 #: ../src/grl-registry.c:543
 #, c-format
 msgid "Metadata key '%s' cannot be registered"
-msgstr "Metadata-nøglen \"%s\" kan ikke registreres"
+msgstr "Metadata-nøglen “%s” kan ikke registreres"
 
 #: ../src/grl-registry.c:983
 #, c-format
 msgid "Source with id '%s' was not found"
-msgstr "Kilde med id \"%s\" blev ikke fundet"
+msgstr "Kilde med id “%s” blev ikke fundet"
 
 #: ../src/grl-registry.c:1057
 #, c-format
@@ -148,12 +144,12 @@ msgstr "Ugyldig udvidelsesmodulfil %s"
 #: ../src/grl-registry.c:1077
 #, c-format
 msgid "'%s' is not a valid plugin file"
-msgstr "\"%s\" er ikke en gyldig udvidelsesmodulfil"
+msgstr "“%s” er ikke en gyldig udvidelsesmodulfil"
 
 #: ../src/grl-registry.c:1096
 #, c-format
 msgid "Plugin '%s' already exists"
-msgstr "Udvidelsesmodulet \"%s\" findes allerede"
+msgstr "Udvidelsesmodulet “%s” findes allerede"
 
 #: ../src/grl-registry.c:1259
 #, c-format
@@ -168,18 +164,18 @@ msgstr "Alle konfigurerede udvidelsesmodulstier er ugyldige"
 #: ../src/grl-registry.c:1366
 #, c-format
 msgid "Plugin '%s' not available"
-msgstr "Udvidelsesmodulet \"%s\" er ikke tilgængeligt"
+msgstr "Udvidelsesmodulet “%s” er ikke tilgængeligt"
 
 #: ../src/grl-registry.c:1594
 #, c-format
 msgid "Plugin not found: '%s'"
-msgstr "Udvidelsesmodul ikke fundet: \"%s\""
+msgstr "Udvidelsesmodul ikke fundet: “%s”"
 
 #: ../src/grl-registry.c:1905
 #, c-format
 msgid "Plugin configuration does not contain 'plugin-id' reference"
 msgstr ""
-"Udvidelsesmodulkonfigurationen indeholder ikke nogen \"plugin-id\"-reference"
+"Udvidelsesmodulkonfigurationen indeholder ikke nogen “plugin-id”-reference"
 
 #: ../src/grl-source.c:2782
 #, c-format
@@ -194,7 +190,12 @@ msgstr "Der kan ikke skrives til nogen af de angivne nøgler"
 #: ../src/grl-source.c:4198
 #, c-format
 msgid "Media has no 'id', cannot remove"
-msgstr "Mediet har ingen \"id\", kan ikke fjerne"
+msgstr "Mediet har ingen “id”, kan ikke fjerne"
+
+#~ msgid "Unhandled status: %s"
+#~ msgstr "Uhåndteret status: %s"
 
 #~ msgid "Unable to load plugin '%s'"
-#~ msgstr "Kan ikke indlæse udvidelsesmodul \"%s\""
+#~ msgstr "Kan ikke indlæse udvidelsesmodul “%s”"
+
+
