--- a/README
+++ b/README
@@ -18,22 +18,31 @@ You can join us on the IRC:
 
 === How do I start? ===
 
-If you are using Ubuntu you can install binary packages by configuring
-our PPA, check the wiki page above for details. Otherwise you  have
-to download Grilo's source code from GNOME's repository and build it
--don't worry, it takes only a few seconds-, see the section below
-if you want to do that.
-
 Once you have Grilo installed, you may want to play around with the
-examples (See section "Examples") or check its documentation 
+examples (See section "Examples") or check its documentation
 and tutorials (See section "Documentation").
+
+Fedora
+
+$ sudo dnf install grilo
+
+ArchLinux
+
+$ sudo pacman -S grilo
+
+Others
+
+Otherwise you  have to download Grilo's source code from GNOME's repository and
+build it -don't worry, it takes only a few seconds-, see the section below if
+you want to do that.
 
 === Building from git ===
 
-$ git clone git://git.gnome.org/grilo
+$ git clone https://gitlab.gnome.org/GNOME/grilo.git
 $ cd grilo
-$ ./autogen.sh
-$ make
+$ meson . build
+$ ninja -C build
+$ sudo ninja -C build install
 
 === Examples ===
 
@@ -50,47 +59,20 @@ this feature).
 4) Organize and define the source's content hierarchy (for sources
 implementing this feature like "bookmarks" or
 "podcasts").
-5) Check available metadata for the media. 
+5) Check available metadata for the media.
 
 For this application to work you need some Grilo plugins that act as media
 sources, that is, plugins that provide the actual content that you will
 browse and search using the application. You can get a bunch of plugins for
 Grilo from the grilo-plugins package here:
 
-http://git.gnome.org/browse/grilo-plugins
+https://gitlab.gnome.org/GNOME/grilo-plugins/
 
-If you are looking for a step-by-step guide from beginning to end, here it is:
+=== Compiling/Running grilo-test-ui ===t clone https://gitlab.gnome.org/GNOME/grilo.git
 
-# Building Grilo
-
-$ git clone git://git.gnome.org/grilo
 $ cd grilo
-$ ./autogen.sh
-$ make
-
-# Building Grilo Plugins and setting GRL_PLUGIN_PATH
-
-$ export PKG_CONFIG_PATH=$PWD:$PKG_CONFIG_PATH
-$ cd ..
-$ git clone git://git.gnome.org/grilo-plugins
-$ cd grilo-plugins
-$ ./autogen.sh
-$ make
-$ make install
-
-# Running grilo-test-ui
-
-$ cd ../grilo
-$ tools/grilo-test-ui/grilo-test-ui
-
-=== Documentation ===
-
-If you are looking for documentation you should add the --enable-gtk-doc
-option to the autogen.sh execution:
-
-$ ./autogen.sh --enable-gtk-doc
-$ make
-
-Then point your browser to open the file doc/reference/html/index.html
+$ meson . build
+$ ninja -C build
+$ ./build/tools/grilo-test-ui/grilo-test-ui-0.3
 
 Enjoy!
