docs grl-launch: A new example that uses resolve
Add a new example to the grl-lauch man file to show the user how to use
the resolve command.

The example uses the goodreads plugin introduced at !grilo-plugins!36

--- a/doc/man/grl-launch-0.3.1
+++ b/doc/man/grl-launch-0.3.1
@@ -113,5 +113,15 @@ grl-launch-0.3 -S browse -k title grlcontainer://grl-tracker-source/videos
 .RE
 .fi
 .PP
+.TP
+Print the author for a book with ISBN equal to xxxxxxxxxxx
+.PP
+.nf
+.RS
+grl-launch-0.3 -F -c 1 -k author resolve grl://grl-goodreads/0?isbn=xxxxxxxxxxx
+.RE
+.fi
+.PP
+.TP
 .SH AUTHOR
 This manual page was written by Alberto Garcia <berto@igalia.com>.
