--- a/AUTHORS
+++ b/AUTHORS
@@ -15,16 +15,21 @@ Anish A
 Antía Puentes
 A S Alam
 Ask Hjorth Larsen
+Athul R T
 Aurimas Černius
+Balasankar C
 Balázs Meskó
 Balázs Úr
 Bastien Nocera
 Benjamin Steinwender
 Bernd Homuth
+Çağatay Yiğit Şahin
 Carles Ferrando
+Carmen Bianca BAKKER
 Cédric Valmary
 César García Tapia
 Chao-Hsiung Liao
+Charles Monzat
 Chris Lord
 Christian Kirbach
 Christophe Fergeau
@@ -36,6 +41,7 @@ Daniel Korostil
 Daniel Mustieles
 Daniel Șerbănescu
 David King
+Debarshi Ray
 Dimitris Spingos
 Dominique Leuenberger
 Dušan Kazik
@@ -63,6 +69,7 @@ Jacobo Aragunde Pérez
 Jan Alexander Steffens (heftig)
 Jasper Lievisse Adriaanse
 Jens Georg
+Jiri Grönroos
 Jiro Matsuzawa
 Joaquim Rocha
 Jordi Mas
@@ -119,6 +126,7 @@ Sergio Villar Senin
 Simon Pena
 Simon Wenner
 Stefan Kost
+Thiago Mendes
 Tim Lunn
 Ting-Wei Lan
 Tom Tryfonidis
@@ -136,6 +144,7 @@ Yi-Jyun Pan
 Yi-Soo An
 Yosef Or Boczko
 Yuri Myasoedov
+Марко Костић
 Милош Поповић
 Мирослав Николић
 甘露(Gan  Lu)
