--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@ Alexander Shopov
 Alexandre Franke
 Anders Jonsson
 Andika Triwidada
+Andre Klapper
 Andres Gomez
 Andrzej Bieniek
 Anish A
@@ -103,6 +104,7 @@ Mike Ruprecht
 Milo Casagrande
 Muhammet Kara
 Murray Cumming
+Nathan Follens
 Nilamdyuti Goswami
 Nishio Futoshi
 Nuno Araujo
@@ -126,6 +128,7 @@ Sergio Villar Senin
 Simon Pena
 Simon Wenner
 Stefan Kost
+Sumaid Syed
 Thiago Mendes
 Tim Lunn
 Ting-Wei Lan
