--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+NEW in 0.3.12
+=============
+  * #107 grl-source: Fix reference count in the bindings
+
+  * Updated translations
+    * Japanese
+    * British English
+
+  * Contributors to this release:
+    Jean Felder <jfelder@gnome.org>
+
 NEW in 0.3.11
 =============
   * !52 pls: Support totem-pl-parser 3.26.4
