--- a/AUTHORS
+++ b/AUTHORS
@@ -24,6 +24,7 @@ Balázs Úr
 Bastien Nocera
 Benjamin Steinwender
 Bernd Homuth
+Boyuan Yang
 Çağatay Yiğit Şahin
 Carles Ferrando
 Carmen Bianca BAKKER
@@ -31,6 +32,7 @@ Cédric Valmary
 César García Tapia
 Chao-Hsiung Liao
 Charles Monzat
+Cheng-Chia Tseng
 Chris Lord
 Christian Kirbach
 Christophe Fergeau
@@ -69,6 +71,7 @@ Inaki Larranaga Murgoitio
 Jacobo Aragunde Pérez
 Jan Alexander Steffens (heftig)
 Jasper Lievisse Adriaanse
+Jean Felder
 Jens Georg
 Jiri Grönroos
 Jiro Matsuzawa
