--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ Alban Browaeys
 Alberto Garcia
 Alexander Shopov
 Alexandre Franke
+Alexey Rubtsov
 Anders Jonsson
 Andika Triwidada
 Andre Klapper
@@ -79,6 +80,7 @@ Joaquim Rocha
 Jordi Mas
 José Dapena Paz
 Juan A. Suarez Romero
+Juliano Camargo
 Jussi Kukkonen
 Kalev Lember
 Kenneth Nielsen
@@ -121,6 +123,7 @@ Rafael Ferreira
 Rafael Fonseca
 Rafael Fontenelle
 Reinout van Schouwen
+Rosen Penev
 Rūdolfs Mazurs
 Ryan Lortie
 Samir Ribic
@@ -150,6 +153,7 @@ Yi-Jyun Pan
 Yi-Soo An
 Yosef Or Boczko
 Yuri Myasoedov
+Źmicier Turok
 Марко Костић
 Милош Поповић
 Мирослав Николић
