--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@
 1PunMan
 Adrião Morão
 Adrien Plazas
+Ahmad Haghighi
 Alban Browaeys
 Alberto Garcia
 Alexander Shopov
@@ -109,6 +110,7 @@ Mike Ruprecht
 Milo Casagrande
 Muhammet Kara
 Murray Cumming
+Naala Nanba
 Nathan Follens
 Nilamdyuti Goswami
 Nishio Futoshi
@@ -149,10 +151,12 @@ Xabier Rodriguez Calvar
 Xavier Claessens
 Xavi Ivars
 Yaakov Selkowitz
+Yaron Shahrabani
 Yi-Jyun Pan
 Yi-Soo An
 Yosef Or Boczko
 Yuri Myasoedov
+Zurab Kargareteli
 Źmicier Turok
 Марко Костић
 Милош Поповић
