--- a/AUTHORS
+++ b/AUTHORS
@@ -128,6 +128,7 @@ Reinout van Schouwen
 Rosen Penev
 Rūdolfs Mazurs
 Ryan Lortie
+Sabri Ünal
 Samir Ribic
 Sam Thursfield
 Sebastian Keller
@@ -145,6 +146,7 @@ veer
 Victor Ibragimov
 Víctor Manuel Jáquez Leal
 Victor Toso
+Weijia Wang
 Wolfgang Stöggl
 Wylmer Wang
 Xabier Rodriguez Calvar
