--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@
 1PunMan
 Adrião Morão
 Adrien Plazas
+Aefgh Threenine
 Ahmad Haghighi
 Alban Browaeys
 Alberto Garcia
@@ -16,7 +17,9 @@ Andres Gomez
 Andrzej Bieniek
 Anish A
 Antía Puentes
+Asadbek Rajabov
 A S Alam
+AsciiWolf
 Ask Hjorth Larsen
 Athul R T
 Aurimas Černius
@@ -27,6 +30,7 @@ Bastien Nocera
 Benjamin Steinwender
 Bernd Homuth
 Boyuan Yang
+Bruce Cowan
 Çağatay Yiğit Şahin
 Carles Ferrando
 Carmen Bianca BAKKER
@@ -67,6 +71,7 @@ George Sedov
 Gil Forcada
 gogo
 Guillaume Emont
+Guntupalli Karunakar
 Iago Toral
 iain
 Inaki Larranaga Murgoitio
@@ -86,6 +91,7 @@ Jussi Kukkonen
 Kalev Lember
 Kenneth Nielsen
 Kjartan Maraas
+Krifa75
 Kristjan SCHMIDT
 leo
 Lionel Landwerlin
@@ -121,6 +127,7 @@ Pawan Chitrakar
 Pedro Albuquerque
 Philip Withnall
 Piotr Drąg
+Rachida SACI
 Rafael Ferreira
 Rafael Fonseca
 Rafael Fontenelle
@@ -134,6 +141,7 @@ Sam Thursfield
 Sebastian Keller
 Seong-ho Cho
 Sergio Villar Senin
+sid
 Simon Pena
 Simon Wenner
 Stefan Kost
